[metadata]
name             = lief
author           = Romain Thomas
author_email     = rthomas@quarkslab.com
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: C++
    Topic :: Software Development :: Libraries

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.5
scripts =
  examples/python/elf_reader.py
  examples/python/pe_reader.py
  examples/python/macho_reader.py

[build_sphinx]
project = LIEF
source-dir = doc/sphinx
config-dir = doc/sphinx
build-dir  = doc/sphinx/_build
fresh-env  = True

[build_ext]
inplace=1

[aliases]
dev = build --debug -j8 develop --user
release = build -j8 develop --user
