[metadata]
name             = lief
author           = Romain Thomas
author_email     = contact@lief.re
description      = Library to instrument executable formats
long_description = file: package/README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url              = https://github.com/lief-project/LIEF
keywords         = parser, elf, pe, macho, reverse-engineering
license = Apache License 2.0
license_files =
   LICENSE
project_urls =
  Documentation=https://lief-project.github.io/doc/latest
  Funding=https://lief-project.github.io/about
  Source=https://github.com/lief-project/LIEF/
  Tracker=https://github.com/lief-project/LIEF/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: C++
    Topic :: Software Development :: Libraries

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.6
scripts =
  examples/python/elf_reader.py
  examples/python/pe_reader.py
  examples/python/macho_reader.py

[build_sphinx]
project = LIEF
source-dir = doc/sphinx
config-dir = doc/sphinx
build-dir  = doc/sphinx/_build
fresh-env  = True

[build_ext]
inplace=1

[aliases]
dev = build --debug -j8 develop --user
release = build -j8 develop --user
